Fix overflow

--- a/frontend/editor/index.css
+++ b/frontend/editor/index.css
@@ -26,7 +26,7 @@ label {
 	max-width: 1000px;
 	padding: 3px;
 	overflow-wrap: normal;
-	overflow-x: scroll;
+	overflow-x: auto;
 	resize: vertical;
 }
 
